Fixed alignment

--- a/styles/AboutMeSection.module.css
+++ b/styles/AboutMeSection.module.css
@@ -9,8 +9,11 @@
 .aboutMeContent {
     display: flex;
     min-height: 100%;
+    max-width: 100rem;
     justify-content: center;
     align-items: center;
+    justify-self: center;
+    align-self: center;
     padding: .8rem;
   }
   
